--- a/indexClase1.html
+++ b/indexClase1.html
@@ -15,8 +15,9 @@
 
 Deafio algoritmo con ciclo
   </header>
-  <script src="./clase.js"></script>
+  <script src="./Productos.js"></script>
   
+  <script src="./clase.js"></script>
 
 
 
